# Q_Lab_HL

./: .env.example  .gitignore  AUTORESEARCH_RULES.md  README.md  RESEARCH_PROMPT.md  autoresearch.py  paper_trade.py  prepare.py  program.md  pyproject.toml  results.tsv  run.py  strategy.py  strategy_model.py
RESEARCH_AGENT/: README.md  SYSTEM_PROMPT.md  bootstrap_workspace.py  context_manifest.json  sync_back.py
autoresearch/: README.md  candidate.template.json  config.agent.json  config.example.json  config.screening.json  leaderboard.jsonl  overnight_summary.md  promotion_policy.json  research_policy.json
data/market_cache_1h/: close.parquet  current_asset_ctxs.parquet  (+9 more)
execution/: README.md  __init__.py  champion.json  champion.live.json  champion.paper.json  exchange_hl.py  portfolio_live.py  risk.py  run_live.py  select_champion.py  state.json  state.py  update_cache.py
paper/: live_signal_latest.json
q_lab_hl/: __init__.py  artifacts.py  audit.py  autoresearch.py  backtest.py  cache.py  config.py  data.py  evaluate.py  ingest.py  portfolio.py  promotion.py  promotion_objects.py  registries.py  research_objects.py  search.py
scripts/: com.stackcapital.q_lab_hl.papertrade.plist  install_paper_trade_cron.sh  install_paper_trade_launchd.sh  run_paper_trade.sh
tests/: test_autoresearch.py  test_autoresearch_screening.py  test_backtest.py  test_data.py  test_execution.py  test_hardened_harness.py  test_hardening.py  test_ingest.py  test_portfolio.py  test_prepare.py  test_promotion.py  test_research_agent_workspace.py  test_search.py  test_strategy.py
(+1 files in other folders)
