[project]
name = "qlab"
version = "0.1.0"
description = "Autonomous quantitative research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "requests>=2.31",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "python-dotenv>=1.0",
    "statsmodels>=0.14",
]
